# scaling-crl

./: .gitignore  CLAUDE.md  README.md  arm_tracking_viz.py  buffer.py  collect_scripted_skill_data.py  collect_skill_library.py  debug_maze.xml  diagnose_hallway_motion.py  diagnostic_results.md  diagnostic_tidybot_push_easy.py  evaluator.py  get_joints.py  gradient_sanity_check.py  oracle_controller_test.py  pyproject.toml  render_hallway_scaffold.py  render_scripted_viz.py  run_composition_ablation.sh  run_push_aside_ladder.sh  run_rollout.py  run_rollout_with_move.py  test_args.py  test_flax.py  test_franka.py  test_humanoid.py  test_tidybot.py  test_tidybot2.py  test_tidybot_controller.py  test_xml.py  train.py  train_constrained_composition.py  train_multi_gpu.py  train_residual_mab.py  verify_tidybot_push_easy.py  xml_sanity_check.py
envs/: ant.py  ant_ball.py  ant_maze.py  ant_maze_generalization.py  ant_push.py  ant_push_IJ.py  debug_env.py  half_cheetah.py  humanoid.py  humanoid_maze.py  pusher.py  reacher.py  scripted_controllers.py  simple_maze.py
envs/assets/: panda_push_bar.xml  panda_push_hard.xml  panda_push_sphere.xml  tidybot_hallway.xml  tidybot_pick.xml  tidybot_push_easy.xml  tidybot_push_hard.xml
envs/assets/franka_emika_panda/: README.md
envs/assets/stanford_tidybot2/: tidybot.xml  tidybot_cam_mounts.xml  tidybot_zed.xml
envs/assets/tidybot/stanford_tidybot/: tidybot.xml
envs/manipulation/: arm_binpick_easy.py  arm_binpick_easy_EEF.py  arm_binpick_hard.py  arm_envs.py  arm_envs_new.py  arm_grasp.py  arm_push_aside.py  arm_push_bar.py  arm_push_easy.py  arm_push_hard.py  arm_push_shifted.py  arm_push_sphere.py  arm_reach.py  test_tidybot_env.py  tidybot_envs.py  tidybot_maze_task.py  verify_arm_reach.py
envs/mobile_manipulation/: maze_utils.py  test_maze_utils.py  tidybot_hallway.py  tidybot_maze.py  tidybot_navigate.py  tidybot_pick.py  tidybot_push_aside.py  tidybot_push_easy.py  tidybot_push_hard.py
visualization/: arm_push_hard_viz.py
