[project]
name = "scaling-crl"
version = "0.1.0"
description = "1000 Layer Networks for Self-Supervised RL: Scaling Depth Can Enable New Goal-Reaching Capabilities"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy==1.26.4",
    ### for workstation
    # "jax[cuda12]==0.5.3; sys_platform == 'linux'",
    # "jax==0.5.3; sys_platform != 'linux'",
    # "jaxlib==0.5.3",
    # "flax==0.10.6",
    ### for cluster
    "jax[cuda12]==0.4.38; platform_system == 'Linux'",
    "jax==0.4.38; platform_system != 'Linux'",
    "flax>=0.9.0,<0.11.0",
    "tyro",
    "wandb==0.17.9",
    "wandb-osh==1.2.2",
    "brax==0.12.5",
    "mujoco-mjx==3.2.6",
    "mediapy==1.2.2",
    "scipy==1.12.0",
    "mujoco==3.2.6"
]

# jax[cuda12] (>=0.5.x) ships CUDA libs as PyPI wheels via the plugin model, so the old
# jax_cuda_releases find-links is no longer needed. The NVIDIA index covers cu12 libs.
[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

